package org.pho.ri.ex1.figuras;

public class Figura {

    public double calcularArea() {
        return 0;
    }

    public double calcularPerimetro() {
        return 0;
    }

    public String descricao() {
        return "";
    }

}
