package org.pho.ri.ex2.core.decorators.features;

public enum Cor {
    VERMELHO,
    VERDE,
    AZUL,
    AMARELO,
    BRANCO,
    PRETO,
    LARANJA,
    MARROM
}
