package org.pho.ri.ex2.core.decorators.features;

public enum Linha {
    SOLIDO,
    TRACEJADO,
    PONTILHADO,
    TRACEJADO_DUPLO,
    TRACEJADO_ESPACO
}
