package org.pho.ri.ex2.figuras.impl;

import org.pho.ri.ex2.figuras.Figura;

public abstract class Quadrilatero implements Figura {

}
